--- a/html/default.html
+++ b/html/default.html
@@ -5,7 +5,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>title</title>
+    <title>default</title>
 
     <meta name="description" content="...">
     <meta name="keyword" content="...">
@@ -14,8 +14,7 @@
     <link rel="stylesheet" href="../assets/css/style.css">
 
     <!--[if lte IE 8]>
-    <script src="../assets/js/vendor/html5shiv-printshiv.min.js"></script>
-    <script src="../assets/js/vendor/respond.min.js"></script>
+    <script src="../assets/js/vendor/preRender.polyfill.js"></script>
     <![endif]-->
 </head>
 <body class="docs">
@@ -89,13 +88,10 @@
 
 </div>
 </div>
-
     <!-- ========================================
          javascript
          ========================================= -->
-    <script src="../assets/js/vendor/prism.js"></script>
-    <script src="../assets/js/vendor/jquery-1.12.4.min.js"></script>
-    <script src="../assets/js/plugins.js"></script>
-    <script src="../assets/js/script.js"></script>
+    <script src="../assets/js/vendor.js"></script>
+    <script src="../assets/js/bundle.js"></script>
 </body>
 </html>
