--- a/html/index.html
+++ b/html/index.html
@@ -14,8 +14,7 @@
     <link rel="stylesheet" href="../assets/css/style.css">
 
     <!--[if lte IE 8]>
-    <script src="../assets/js/vendor/html5shiv-printshiv.min.js"></script>
-    <script src="../assets/js/vendor/respond.min.js"></script>
+    <script src="../assets/js/vendor/preRender.polyfill.js"></script>
     <![endif]-->
 </head>
 <body class="docs docs-layout-frame">
@@ -46,14 +45,10 @@
             </div>
         </div>
     </div>
-
-
     <!-- ========================================
          javascript
          ========================================= -->
-    <script src="../assets/js/vendor/jquery-1.12.4.min.js"></script>
-    <script src="../assets/js/plugins.js"></script>
-    <script src="../assets/js/script.js"></script>
-    <script src="../assets/js/docs.js"></script>
+    <script src="../assets/js/vendor.js"></script>
+    <script src="../assets/js/bundle.js"></script>
 </body>
 </html>
