--- a/html/table.html
+++ b/html/table.html
@@ -14,12 +14,11 @@
     <link rel="stylesheet" href="../assets/css/style.css">
 
     <!--[if lte IE 8]>
-    <script src="../assets/js/vendor/html5shiv-printshiv.min.js"></script>
-    <script src="../assets/js/vendor/respond.min.js"></script>
+    <script src="../assets/js/vendor/preRender.polyfill.js"></script>
     <![endif]-->
 </head>
 <body class="docs">
-<div class="docs-component__wrapper">
+<div class="docs-component">
 <div class="docs-component__container">
 
 
@@ -255,15 +254,15 @@
     </section>
 
 
+
 </div>
 </div>
+
 
     <!-- ========================================
          javascript
          ========================================= -->
-    <script src="../assets/js/vendor/prism.js"></script>
-    <script src="../assets/js/vendor/jquery-1.12.4.min.js"></script>
-    <script src="../assets/js/plugins.js"></script>
-    <script src="../assets/js/script.js"></script>
+    <script src="../assets/js/vendor.js"></script>
+    <script src="../assets/js/bundle.js"></script>
 </body>
 </html>
