--- a/html/index.html
+++ b/html/index.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="../assets/css/style.css">
 
     <!--[if lte IE 8]>
-    <script src="../assets/js/vendor/preRender.polyfill.js"></script>
+    <script src="../assets/js/preRender.polyfill.js"></script>
     <![endif]-->
 </head>
 <body class="docs docs-layout-frame">
