--- a/html/modal.html
+++ b/html/modal.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="../assets/css/style.css">
 
     <!--[if lte IE 8]>
-    <script src="../assets/js/vendor/preRender.polyfill.js"></script>
+    <script src="../assets/js/preRender.polyfill.js"></script>
     <![endif]-->
     <style>
     .modaltest { z-index: 999999; position: fixed; top: 0; right: 0; padding: 10px; border: 1px solid #ddd; background: rgba(255,255,255,0.6); }
