--- a/html/tab.html
+++ b/html/tab.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="../assets/css/style.css">
 
     <!--[if lte IE 8]>
-    <script src="../assets/js/vendor/preRender.polyfill.js"></script>
+    <script src="../assets/js/preRender.polyfill.js"></script>
     <![endif]-->
 </head>
 <body class="docs">
@@ -132,7 +132,7 @@
                 <div class="tablist" role="tablist">
                     <ul>
                         <li class="tablist__item is-active"><a href="javascript:void(0);" id="tab01-01" role="tab" data-ui-tab="tab"><span>Lorem.</span></a></li>
-                        <li class="tablist__item"><a href="javascript:void(0);" id="tab01-02" role="tab" data-ui-tab="tab"><span>Nostrum.</span></a></li>
+                        <li class="tablist__item"><a href="javascript:void(0);" id="tab01-02" role="tab" data-ui-tab="tab"><span><i>Nostrum.</i></span></a></li>
                         <li class="tablist__item"><a href="javascript:void(0);" id="tab01-03" role="tab" data-ui-tab="tab"><span>Tenetur.</span></a></li>
                         <li class="tablist__item"><a href="javascript:void(0);" id="tab01-04" role="tab" data-ui-tab="tab"><span>Quas.</span></a></li>
                     </ul>
